Change to bsbook output

--- a/_output.yml
+++ b/_output.yml
@@ -1,12 +1,8 @@
-bookdown::gitbook:
-  css: style.css
-  config:
-    toc:
-      before: |
-        <li><a href="./">A Minimal Book Example</a></li>
-      after: |
-        <li><a href="https://github.com/rstudio/bookdown" target="blank">Published with bookdown</a></li>
-    download: ["pdf", "epub"]
+bookdown::bs4_book:
+  css: bs4_style.css
+  theme:
+    primary: "#096B72"
+  repo: https://github.com/bernard-liew/se201_stats_book/tree/2021_version
 bookdown::pdf_book:
   includes:
     in_header: preamble.tex
@@ -14,7 +10,6 @@ bookdown::pdf_book:
   citation_package: natbib
   keep_tex: yes
 bookdown::epub_book: default
-
 format:
   html:
     theme:
